Alignment changes and bug fixes

--- a/src/design/Styles.scss
+++ b/src/design/Styles.scss
@@ -72,7 +72,9 @@
 .trackOrder {
   text-transform: capitalize;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 500;
+  margin-top: 12px;
+  padding-bottom: 6px;
 }
 .allButtons {
   width: 100px;
